<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFF"
            android:theme="@style/GalaxyZooThemeToolbarDarkOverflow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and Conditiond"
                android:textSize="30dp"
                android:textColor="@color/red_app"/>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:background="#00b8a9"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

    </android.support.design.widget.AppBarLayout>



    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/red_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="ORDERS"
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                        <TextView
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order1"/>


            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order2"/>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order3"/>


            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order4"/>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order5"/>


            </android.support.v7.widget.CardView>



            <TextView
                android:textColor="@color/red_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="DELIVERY"
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery1"/>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery2"/>


            </android.support.v7.widget.CardView>






            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:background="#E6E6E6"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/footer_btn1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="90dp"
                            android:layout_marginTop="18dp"
                            android:background="@drawable/linkedin"
                            />
                        <ImageButton
                            android:id="@+id/footer_btn2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="18dp"
                            android:background="@drawable/facebook"/>
                        <ImageButton
                            android:id="@+id/footer_btn3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="18dp"
                            android:background="@drawable/twitter"/>

                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="#000"
                        android:text="Copyright © 2015 Go Rituals | All right Reserved"
                        android:textColor="#fff"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_gravity="bottom"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>